// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`QUERY: currentPathName changes, but pathname stays the same (only query changes) 1`] = `
Object {
  "location": Object {
    "hasSSR": true,
    "history": undefined,
    "kind": "push",
    "pathname": "/first",
    "payload": Object {},
    "prev": Object {
      "pathname": "/first",
      "payload": Object {},
      "query": Object {
        "baz": "69",
        "foo": "bar",
      },
      "search": "foo=bar&baz=69",
      "type": "FIRST",
    },
    "query": Object {
      "baz": "70",
      "foo": "car",
    },
    "routesMap": Object {
      "FIRST": "/first",
      "SECOND": "/second/:param",
      "THIRD": "/third",
    },
    "search": "foo=car&baz=70",
    "type": "FIRST",
  },
  "title": "FIRST",
}
`;

exports[`QUERY: dispatched as action.meta.query 1`] = `
Object {
  "location": Object {
    "hasSSR": true,
    "history": undefined,
    "kind": "push",
    "pathname": "/third",
    "payload": Object {},
    "prev": Object {
      "pathname": "/first",
      "payload": Object {},
      "query": Object {
        "baz": 69,
        "foo": "bar",
      },
      "search": "baz=69&foo=bar",
      "type": "FIRST",
    },
    "query": Object {
      "baz": 69,
      "foo": "bar",
    },
    "routesMap": Object {
      "FIRST": "/first",
      "SECOND": "/second/:param",
      "THIRD": "/third",
    },
    "search": "baz=69&foo=bar",
    "type": "THIRD",
  },
  "title": "THIRD",
}
`;

exports[`QUERY: dispatched as action.payload.query 1`] = `
Object {
  "location": Object {
    "hasSSR": true,
    "history": undefined,
    "kind": "back",
    "pathname": "/third",
    "payload": Object {},
    "prev": Object {
      "pathname": "/first",
      "payload": Object {},
      "type": "FIRST",
    },
    "routesMap": Object {
      "FIRST": "/first",
      "SECOND": "/second/:param",
      "THIRD": "/third",
    },
    "type": "THIRD",
  },
  "title": "THIRD",
}
`;

exports[`QUERY: dispatched as action.query 1`] = `
Object {
  "location": Object {
    "hasSSR": true,
    "history": undefined,
    "kind": "push",
    "pathname": "/third",
    "payload": Object {},
    "prev": Object {
      "pathname": "/first",
      "payload": Object {},
      "query": Object {
        "baz": 69,
        "foo": "bar",
      },
      "search": "baz=69&foo=bar",
      "type": "FIRST",
    },
    "query": Object {
      "baz": 69,
      "foo": "bar",
    },
    "routesMap": Object {
      "FIRST": "/first",
      "SECOND": "/second/:param",
      "THIRD": "/third",
    },
    "search": "baz=69&foo=bar",
    "type": "THIRD",
  },
  "title": "THIRD",
}
`;

exports[`QUERY: generated from pathToAction within <Link /> 1`] = `
Object {
  "location": Object {
    "hasSSR": true,
    "history": undefined,
    "kind": "push",
    "pathname": "/first",
    "payload": Object {},
    "prev": Object {
      "pathname": "/first",
      "payload": Object {},
      "query": Object {
        "baz": "69",
        "foo": "bar",
      },
      "search": "baz=69&foo=bar",
      "type": "FIRST",
    },
    "query": Object {
      "baz": "70",
      "foo": "car",
    },
    "routesMap": Object {
      "FIRST": "/first",
      "SECOND": "/second/:param",
      "THIRD": "/third",
    },
    "search": "baz=70&foo=car",
    "type": "FIRST",
  },
  "title": "FIRST",
}
`;

exports[`QUERY: history.push("/path?search=foo") 1`] = `
Object {
  "location": Object {
    "hasSSR": true,
    "history": undefined,
    "kind": "push",
    "pathname": "/third",
    "payload": Object {},
    "prev": Object {
      "pathname": "/first",
      "payload": Object {},
      "query": Object {
        "baz": "69",
        "foo": "bar",
      },
      "search": "foo=bar&baz=69",
      "type": "FIRST",
    },
    "query": Object {
      "baz": "69",
      "foo": "bar",
    },
    "routesMap": Object {
      "FIRST": "/first",
      "SECOND": "/second/:param",
      "THIRD": "/third",
    },
    "search": "foo=bar&baz=69",
    "type": "THIRD",
  },
  "title": "THIRD",
}
`;

exports[`enhancer -> _historyAttemptDispatchAction() dispatches action matching pathname when history location changes 1`] = `
Object {
  "meta": Object {
    "location": Object {
      "current": Object {
        "pathname": "/second/foo",
        "payload": Object {
          "param": "foo",
        },
        "type": "SECOND",
      },
      "history": undefined,
      "kind": "pop",
      "prev": Object {
        "pathname": "",
        "payload": Object {},
        "type": "",
      },
    },
  },
  "payload": Object {
    "param": "foo",
  },
  "type": "SECOND",
}
`;

exports[`middleware dispatches location-aware action, changes address bar + document.title 1`] = `
Object {
  "hasSSR": undefined,
  "history": undefined,
  "kind": "load",
  "pathname": "/",
  "payload": Object {},
  "prev": Object {
    "pathname": "",
    "payload": Object {},
    "type": "",
  },
  "routesMap": Object {
    "FIRST": "/first",
    "SECOND": "/second/:param",
    "THIRD": "/third",
  },
  "type": "@@redux-first-router/NOT_FOUND",
}
`;

exports[`middleware dispatches location-aware action, changes address bar + document.title 2`] = `
Object {
  "meta": Object {
    "location": Object {
      "current": Object {
        "pathname": "/second/bar",
        "payload": Object {
          "param": "bar",
        },
        "type": "SECOND",
      },
      "history": undefined,
      "kind": "push",
      "prev": Object {
        "pathname": "/",
        "payload": Object {},
        "type": "@@redux-first-router/NOT_FOUND",
      },
    },
  },
  "payload": Object {
    "param": "bar",
  },
  "type": "SECOND",
}
`;

exports[`middleware dispatches location-aware action, changes address bar + document.title 3`] = `
Object {
  "location": Object {
    "hasSSR": undefined,
    "history": undefined,
    "kind": "push",
    "pathname": "/second/bar",
    "payload": Object {
      "param": "bar",
    },
    "prev": Object {
      "pathname": "/",
      "payload": Object {},
      "type": "@@redux-first-router/NOT_FOUND",
    },
    "routesMap": Object {
      "FIRST": "/first",
      "SECOND": "/second/:param",
      "THIRD": "/third",
    },
    "type": "SECOND",
  },
  "title": "SECOND",
}
`;

exports[`middleware if onBeforeChange dispatches redirect, route changes with kind === "redirect" 1`] = `
Object {
  "hasSSR": undefined,
  "history": undefined,
  "kind": "redirect",
  "pathname": "/third",
  "payload": Object {},
  "prev": Object {
    "pathname": "/first",
    "payload": Object {},
    "type": "FIRST",
  },
  "routesMap": Object {
    "FIRST": "/first",
    "SECOND": "/second/:param",
    "THIRD": "/third",
  },
  "type": "THIRD",
}
`;

exports[`middleware onBeforeChange redirect on server results in 1 history entry 1`] = `
Object {
  "hasSSR": true,
  "history": undefined,
  "kind": "redirect",
  "pathname": "/third",
  "payload": Object {},
  "prev": Object {
    "pathname": "/first",
    "payload": Object {},
    "type": "FIRST",
  },
  "routesMap": Object {
    "FIRST": "/first",
    "SECOND": "/second/:param",
    "THIRD": "/third",
  },
  "type": "THIRD",
}
`;

exports[`middleware user dispatches NOT_FOUND and middleware adds missing info to action 1`] = `
Object {
  "meta": Object {
    "location": Object {
      "current": Object {
        "pathname": "/first",
        "payload": Object {},
        "type": "@@redux-first-router/NOT_FOUND",
      },
      "history": undefined,
      "kind": "load",
      "prev": Object {
        "pathname": "/first",
        "payload": Object {},
        "type": "FIRST",
      },
    },
  },
  "payload": Object {},
  "type": "@@redux-first-router/NOT_FOUND",
}
`;

exports[`middleware user dispatches NOT_FOUND redirect and middleware adds missing info to action 1`] = `
Object {
  "meta": Object {
    "location": Object {
      "current": Object {
        "pathname": "/not-found",
        "payload": Object {},
        "type": "@@redux-first-router/NOT_FOUND",
      },
      "history": undefined,
      "kind": "redirect",
      "prev": Object {
        "pathname": "/first",
        "payload": Object {},
        "type": "FIRST",
      },
    },
  },
  "payload": Object {},
  "type": "@@redux-first-router/NOT_FOUND",
}
`;

exports[`title and location options as selector functions 1`] = `
Object {
  "meta": Object {
    "location": Object {
      "current": Object {
        "pathname": "/first",
        "payload": Object {},
        "type": "FIRST",
      },
      "history": undefined,
      "kind": "push",
      "prev": Object {
        "pathname": "/first",
        "payload": Object {},
        "type": "FIRST",
      },
    },
  },
  "payload": Object {},
  "type": "FIRST",
}
`;
